[package]
name = "sqlite3-guts"
version = "0.1.0"
edition = "2021"
description = "An experimental library for exploring the internals of SQLite databases."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0"
